# pii-anonymizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.layer  Makefile  README.md  SECURITY.md  create_layer.sh  generate_frontend_env.sh  pii_detection_demo.ipynb  pyproject.toml  requirements_lambda.txt
.github/workflows/: python-lint.yml
docs/: IAM-Permissions.md  SECURITY.md  audio.md  config.md  detection.md  infrastructure.md  processing-modes.md  redaction.md  synthetic.md
frontend/: .env.example  README.md  app.py  requirements.txt
images/: workflow-diagram.md
infra/cfn/: README.md  deploy.sh  parameters.example.json  template.yaml
infra/statemachine/: pii_processing.asl.json
infra/terraform/: README.md  main.tf  output.tf  terraform.tfvars.example  variables.tf
sample-data/: domain.xlsx  healthcare_claim.json  healthcare_insurance_pii_edge_cases.csv  healthcare_records.txt  sample_pii_multipage.docx  test_pii.tif
src/: __init__.py  config.yaml  pricing.yaml
src/core/: pii_detector.py  prompts.py  redactor.py  synthetic_pii_generator.py  text_replacer.py  value_categorizer.py
src/handlers/: batch_trigger_handler.py  pii_detection_handler.py  redact_handler.py  router_handler.py  synthetic_handler.py  workflow_tracker_handler.py
src/helpers/: config_loader.py  font_config.py  log_scrubber.py  model_config_helper.py  model_router.py  observability.py  page_type_checker.py  pdf_processor.py  text_chunker.py  textract_helper.py  threaded_detector.py  throttle_handler.py  token_tracker.py
src/infra/: dynamodb_manager.py  sqs_handler.py
src/processors/: audio_processor.py  image_processor.py  pdf_image_processor.py  pdf_text_processor.py  tabular_processor.py  txt_processor.py  word_processor.py
src/redaction/: pdf_redactor.py
(+11 files in other folders)
